services/echo-ci-cd/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-ci-cd--staging
  name: echo-ci-cd--staging
  namespace: staging
spec:
  selector:
    app: echo-ci-cd--staging
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
