services/echo-ci-cd/staging/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-echo-ci-cd--staging
  labels:
    app: echo-ci-cd--staging
  namespace: staging
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  hostnames:
  - efishery.southeastasia.cloudapp.azure.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /staging/
    backendRefs:
    - kind: Service
      name: echo-ci-cd--staging
      port: 8080
